# model3d_preview

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build-win.bat  build-win.sh  build.lua  init-setup-osx.sh  init-setup-win.bat  package-install.bat  package-install.sh  premake5.lua  setup-win.bat  vcpkg.json
core/: build-core.lua
core/src/: core.cpp  core.h
include/: my_library.h  test.h
scripts/: setup-win.bat
src/: main.cpp
